# digitalsec-hardrive

./: .gitignore  README.md  pyproject.toml
deployment/: Dockerfile  docker-compose.override.yml
docs/: .$Diagrams.drawio.bkp  Diagrams.drawio
src/app/: __init__.py  asgi.py  queues.py  worker.py
src/app/api/: __init__.py
src/app/api/handlers/: __init__.py  _decorator.py  documents.py  investigations.py
src/app/api/rest/: schemas.py
src/app/api/rest/v1/: __init__.py
src/app/api/rest/v1/analytics/: __init__.py  endpoints.py  schemas.py
src/app/api/rest/v1/intakes/: endpoints.py  schemas.py
src/app/api/rest/v1/routes/: __init__.py  endpoints.py  schemas.py
src/app/api/tasks/: __init__.py  routes.py
src/app/configs/: external_settings.py  internal_settings.py
src/app/container/: container.py  keys.py  wrappers.py
src/app/infrastructure/: __init__.py  rabbitmq.py  redis.py  s3.py  segmenters.py  summarizer.py  vectorizer.py
src/app/infrastructure/database/: postgres.py
src/app/infrastructure/database/migrations/versions/: 33bde010d27a_s3.py  61d5ea069fed_init.py  ddf522942d93_cancelled_process_status.py  dff70f22410e_forward_score.py
src/app/infrastructure/scheduler/: manager.py
src/app/logs/: logger.py
src/app/middlewares/: __init__.py  request_context.py
src/app/models/: __init__.py  enums.py  models.py  schemas.py
src/app/repositories/: __init__.py  agents.py  analytics.py  document_chunks.py  document_meta_prototypes.py  documents.py  forwarded.py  routes.py
src/app/service_layer/: __init__.py  aClasses.py  agents.py  analytics.py  candidate_evaluator.py  documents.py  retrievers.py  routes.py  uow.py
src/app/tasks/: __init__.py  routes.py
src/app/utils/: cleaners.py  files.py  hash.py  orm.py
src/app/utils/prompts/templates/: __init__.py  relevance.py  score.py  summary.py
src/tests/: __init__.py  conftest.py
src/tests/integration/: conftest.py  test_document_chunks_repository.py
src/tests/unit/: test_text_cleaner.py
